--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>News</title>
+  <!-- 样式引入 -->
+  <link rel="stylesheet" href="./css/pc.css">
 </head>
 <body>
   <div id="test">123</div>
