--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,minimum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>News</title>
   <!-- 样式引入 -->
   <link rel="stylesheet" href="./css/pc.css">
+  <link rel="stylesheet" href="./css/mobile.css">
 </head>
 <body>
   <div id="test">123</div>
