很小的调整

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/mobile.css">
 </head>
 <body>
-  <div id="test">123</div>
+  <div id="root"> </div>
 <script type="text/javascript" src="bundle.js">
 </script>
 </body>
