--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>News</title>
   <!-- 样式引入 -->
-  <link rel="stylesheet" href="./css/pc.css">
-  <link rel="stylesheet" href="./css/mobile.css">
+  <link rel="stylesheet" href="/css/pc.css">
+  <link rel="stylesheet" href="/css/mobile.css">
 </head>
 <body>
   <div id="root"> </div>
-<script type="text/javascript" src="bundle.js">
+<script type="text/javascript" src="/bundle.js">
 </script>
 </body>
 </html>
